--- a/src/app/note/note.component.css
+++ b/src/app/note/note.component.css
@@ -1,18 +1,8 @@
-div.note-container {
-  color: white;
-  padding: 10px;
-  background-color: rgba(0,0,0,.5);
-  border: 1px solid rgba(202, 200, 200, 0.5);
-  border-radius: 5px;
+.bg-darker {
+  background-color: rgba(0,0,0,.3);
 }
 
-#note-content {
-  margin: 10px;
-  padding: 10px;
-  background-color: rgba(0,0,0,.1);
-  border: 1px solid rgba(255,255,255,.2);
-  border-radius: 5px;
-
+p.text-break {
   white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
   white-space: -webkit-pre-wrap;          /* Chrome & Safari */
   white-space: -pre-wrap;                 /* Opera 4-6 */
@@ -20,25 +10,4 @@ div.note-container {
   white-space: pre-wrap;                  /* CSS3 */
   word-wrap: break-word;                  /* Internet Explorer 5.5+ */
   word-break: break-all;
-}
-
-#note-content-buttons > button:first-child:hover {
-  border: 1px solid lime;
-  transition: border 0.5s;
-}
-
-#note-content-buttons > button:nth-child(2):hover {
-  border: 1px solid red;
-  transition: border 0.5s;
-}
-
-#note-content-buttons > button {
-  margin-right: 10px;
-  color: white;
-  background-color: rgba(0,0,0,.1);
-  border: 1px solid rgba(255,255,255,.1);
-}
-
-span.orange {
-  color: orange;
 }
