--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,14 +1,14 @@
 
 <div class="bg-darker text-white m-2 p-3 jumbotron">
     <p [innerHTML]='formatNoteData()'></p>
-    <div class="well border-dark m-4 p-3 bg-darker text-break">
+    <div class="border-radius border-dark m-4 p-3 bg-darker text-break">
       {{ note.content }}
     </div>
     <div>
-      <button class='btn btn-dark mr-2' (click)='noteUpdateModal(updatemodal)'>
+      <button class='btn btn-dark mr-2 border-hover' (click)='noteUpdateModal(updatemodal)'>
         <fa-icon [icon]="penIcon"></fa-icon> &nbsp; update
       </button>
-      <button class="btn btn-dark mr-2" (click)="noteDeleteModal(deletemodal)">
+      <button class="btn btn-dark mr-2 border-hover" (click)="noteDeleteModal(deletemodal)">
         <fa-icon [icon]="crossIcon"></fa-icon> &nbsp; delete
       </button>
     </div>
